Enumだったことを思い出したのでEnumSetに